# sessionary-onboarding

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
