[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["hoho00 <jhoya963@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
